--- a/asserts/styles/article.scss
+++ b/asserts/styles/article.scss
@@ -1,51 +1,21 @@
 @import "bourbon/_bourbon";
 
-@include keyframes(overturn) {
-  from{
-    @include transform(rotateY(0deg));
+.article{
+  #btn-new{
+
   }
-  to{
-    @include transform(rotateY(180deg));
-  }
-}
 
-.cover{
-  position: absolute;
-  z-index: 9;
-  width: 100%;
-  height: 100%;
-}
-
-.loading{
-  position: absolute;
-  z-index: 10;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.5;
-}
-
-.img-wapper{
-  position: relative;
-  width: 100px;
-  height: 100px;
-  float:left;
-  margin:5px;
-  cursor: pointer;
-  img{
-    position: absolute;
-    border:0;
-    display: block;
+  #content{
     width: 100%;
-    height: 100%;
-    @include animation-duration(1s);
-    @include animation-timing-function(linear);
-    @include animation-fill-mode(forwards);
-    &.front{
-      z-index: 101;
-    }
-    &.background{
-      z-index:102;
-      @include backface-visibility(hidden);
-    }
+    resize: none;
+    font-size: 1.2em;
+    line-height: 1.5em;
+    height: 0;
+    opacity: 0;
+  }
+
+  .preview{
+    min-height: 300px;
+    background-color: #f5f5f5;
   }
 }
