格式化目录

--- a/views/demo/gallery.html
+++ b/views/demo/gallery.html
@@ -1,4 +1,4 @@
-<div class="gallery" ng-controller="gallery_ctrl">
+<div class="gallery" ng-controller="galleryCtrl">
     <!--<div class="cover"></div>-->
     <!--<div class="loading"></div>-->
     <div class="img-container clearfix">
