--- a/views/inner/article.html
+++ b/views/inner/article.html
@@ -1,9 +1,15 @@
 <div class="article" ng-controller="articleCtrl">
-    <div>
+    <div class="btn-group">
         <button class="btn btn-danger">新建</button>
         <button class="btn btn-success" ng-click="save()">保存</button>
     </div>
-    <input type="text" ng-model="title">{{title}}
-    <textarea ng-model="content"></textarea>
+    <form>
+        <div class="form-group">
+            <input class="form-control" type="text" ng-model="title">
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" ng-model="content"></textarea>
+        </div>
+    </form>
     <div ng-bind-html="content|markdown"></div>
 </div>
