--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -1,3 +1,11 @@
 <div class="home">
-    <a ui-sref="gallery">gallery</a>
+    <h1>Demo</h1>
+    <ul>
+        <li>
+            <a ui-sref="gallery">gallery</a>
+        </li>
+        <li>
+            <a ui-sref="box">box</a>
+        </li>
+    </ul>
 </div>
