--- a/asserts/styles/demo/box.scss
+++ b/asserts/styles/demo/box.scss
@@ -5,16 +5,16 @@
     @include transform(rotateY(0deg));
   }
   to{
-    @include transform(rotateY(-90deg));
+    @include transform(rotateY(360deg));
   }
 }
 
 @include keyframes(overturn2) {
   from{
-    @include transform(rotateY(-360deg));
+    @include transform(rotateY(90deg));
   }
   to{
-    @include transform(rotateY(0deg));
+    @include transform(rotateY(450deg));
   }
 }
 
@@ -23,7 +23,7 @@
     @include transform(rotateY(180deg));
   }
   to{
-    @include transform(rotateY(270deg));
+    @include transform(rotateY(540deg));
   }
 }
 
@@ -32,11 +32,28 @@
     @include transform(rotateY(270deg));
   }
   to{
-    @include transform(rotateY(360deg));
+    @include transform(rotateY(630deg));
   }
 }
 
-$unit:400px;
+@include keyframes(overturn5) {
+  from{
+    @include transform(rotateY(0deg) rotateX(90deg));
+
+  }
+  to{
+    @include transform(rotateY(360deg) rotateX(90deg));
+  }
+}
+
+@include keyframes(overturn6) {
+  from{
+    @include transform(rotateY(0deg) rotateX(270deg));
+  }
+  to{
+    @include transform(rotateY(360deg) rotateX(270deg));
+  }
+}
 
 .box{
   .face-wapper{
@@ -44,51 +61,58 @@ $unit:400px;
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
-    width: 2*$unit;
-    height: $unit;
+    width: 400px;
+    height: 400px;
     border:1px solid #000;
-    @include perspective(2*$unit);
+    @include perspective(400px);
     .face{
-      width: 50%;
+      width: 100%;
       height: 100%;
       position: absolute;
       font-size: 6em;
       font-weight: bold;
-      line-height: $unit;
+      line-height: 400px;
       text-align: center;
-      @include transform-origin(100% 50%);
       @include animation-duration(4s);
       @include animation-timing-function(linear);
       @include animation-fill-mode(forwards);
       @include  animation-iteration-count(infinite);
+      @include transform-origin(50% 50% -200px);
+//      @include backface-visibility(hidden);
     }
 
     .face1{
-      background-color:green;
-      z-index: 1;
+      background-color:#ff0000;
       @include animation-name(overturn1);
     }
 
     .face2{
-      background-color:blue;
-      z-index: 1;
+      background-color:#00ff00;
       @include animation-name(overturn2);
     }
 
     .face3{
-      background-color:gray;
-      z-index: 3;
-//      @include animation-name(overturn3);
+      background-color:#0000ff;
+      @include animation-name(overturn3);
     }
 
     .face4{
-      background-color:red;
-      z-index: 4;
-//      @include animation-name(overturn4);
+      background-color:#ffff00;
+      @include animation-name(overturn4);
+    }
+
+    .face5{
+      background-color:#00ffff;
+      @include animation-name(overturn5);
+    }
+
+    .face6{
+      background-color:#ff00ff;
+      @include animation-name(overturn6);
     }
 
     .pause{
-       @include animation-play-state(paused);
+      @include animation-play-state(paused);
     }
   }
 }
