--- a/views/demo/box.html
+++ b/views/demo/box.html
@@ -1,13 +1,13 @@
 <div class="box" ng-controller="boxCtrl">
     <div class="btn-group">
-        <button class="btn btn-default" ng-click="prev()">prev</button>
-        <button class="btn btn-default" ng-click="next()">next</button>
         <button class="btn btn-default" ng-click="pause=!pause">pause/start</button>
     </div>
-    <div class="face-wapper">
-        <!--<div class="face face1">1</div>-->
+    <div class="face-wapper" >
+        <div class="face face1" ng-class="{'pause':pause}">1</div>
         <div class="face face2" ng-class="{'pause':pause}">2</div>
-        <!--<div class="face face3">3</div>-->
-        <!--<div class="face face4">4</div>-->
+        <div class="face face3" ng-class="{'pause':pause}">3</div>
+        <div class="face face4" ng-class="{'pause':pause}">4</div>
+        <div class="face face5" ng-class="{'pause':pause}">5</div>
+        <div class="face face6" ng-class="{'pause':pause}">6</div>
     </div>
 </div>
