--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -7,5 +7,8 @@
         <li>
             <a ui-sref="box">box</a>
         </li>
+        <li>
+            <a ui-sref="timer">timer</a>
+        </li>
     </ul>
 </div>
