--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -10,5 +10,8 @@
         <li>
             <a ui-sref="timer">timer</a>
         </li>
+        <li>
+            <a ui-sref="canvas">canvas</a>
+        </li>
     </ul>
 </div>
