--- a/views/demo/gallery.html
+++ b/views/demo/gallery.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="front animation-overturn" ng-class="{reverse:reverse}">
-                <img ng-src="{{user.src}}" ff-load="loading(user.src)">
+                <img ng-src="{{user.src}}" z-load="loading(user.src)">
             </div>
         </div>
     </div>
