--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -13,5 +13,8 @@
         <li>
             <a ui-sref="canvas">canvas</a>
         </li>
+        <li>
+            <a ui-sref="directive">directive</a>
+        </li>
     </ul>
 </div>
