--- a/asserts/styles/directive.scss
+++ b/asserts/styles/directive.scss
@@ -3,7 +3,7 @@
   .number-picker{
     .bar{
       position: relative;
-      width: 200px;
+      width: 220px;
       height: 30px;
       background-color: #a3a3a3;
       border-radius: 5px;
@@ -12,6 +12,7 @@
         top:-10px;
         width: 20px;
         height: 50px;
+        cursor: pointer;
         background-color: #ffffff;
         border: 2px solid #000000;
         border-radius: 5px;
