--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -14,7 +14,10 @@
             <a ui-sref="canvas">canvas</a>
         </li>
         <li>
-            <a ui-sref="directive">directive</a>
+            <a ui-sref="fan">fan</a>
+        </li>
+        <li>
+            <a ui-sref="test">test</a>
         </li>
     </ul>
 </div>
