--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -17,6 +17,9 @@
             <a ui-sref="fan">fan</a>
         </li>
         <li>
+            <a ui-sref="paint">paint</a>
+        </li>
+        <li>
             <a ui-sref="test">test</a>
         </li>
     </ul>
