--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -20,6 +20,9 @@
             <a ui-sref="paint">paint</a>
         </li>
         <li>
+            <a ui-sref="book">book</a>
+        </li>
+        <li>
             <a ui-sref="test">test</a>
         </li>
     </ul>
