--- a/views/demo/home.html
+++ b/views/demo/home.html
@@ -23,6 +23,9 @@
             <a ui-sref="book">book</a>
         </li>
         <li>
+            <a ui-sref="cycle">cycle</a>
+        </li>
+        <li>
             <a ui-sref="test">test</a>
         </li>
     </ul>
